# interactivestories

./: .env.example  .gitignore  app.py  gunicorn.config.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
instance/: stories.db
models/: story.py  user.py
services/: __init__.py  azure_storage.py
static/: pdf-viewer.mjs  styles.css  viewer.css
static/pdfjs-5.4.54-dist/web/: viewer.css  viewer.mjs
templates/: index.html  layout.html  view_story.html
